Fix `.dropdown` wrapping, helpers

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -8,10 +8,10 @@ $navbar-item-active-color: $black !default
 $navbar-item-active-background-color: transparent !default
 
 $navbar-tab-hover-background-color: transparent !default
-$navbar-tab-hover-border-bottom-color: $primary !default
-$navbar-tab-active-color: $primary !default
+$navbar-tab-hover-border-bottom-color: $dark !default
+$navbar-tab-active-color: $dark !default
 $navbar-tab-active-background-color: transparent !default
-$navbar-tab-active-border-bottom-color: $primary !default
+$navbar-tab-active-border-bottom-color: $dark !default
 $navbar-tab-active-border-bottom-style: solid !default
 $navbar-tab-active-border-bottom-width: 3px !default
 
